@@ -2,14 +2,26 @@ package cl.smartlogix.gateway.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.convert.converter.Converter;
+import org.springframework.security.authentication.AbstractAuthenticationToken;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.oauth2.jwt.Jwt;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
+import org.springframework.security.oauth2.server.resource.authentication.ReactiveJwtAuthenticationConverterAdapter;
 import org.springframework.security.web.server.SecurityWebFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsConfigurationSource;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
+import reactor.core.publisher.Mono;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebFluxSecurity
@@ -18,26 +30,56 @@ public class SecurityConfig {
     @Bean
     public SecurityWebFilterChain springSecurityFilterChain(ServerHttpSecurity http) {
         http
-            .csrf(ServerHttpSecurity.CsrfSpec::disable)
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .authorizeExchange(exchanges -> exchanges
-                .anyExchange().permitAll()  // Desarrollo: permitir todo
-            );
-        // Para producción, descomentar y configurar JWT:
-        // .oauth2ResourceServer(oauth2 -> oauth2.jwt(jwt -> {}))
-        // .authorizeExchange(exchanges -> exchanges
-        //     .pathMatchers("/actuator/**", "/fallback").permitAll()
-        //     .anyExchange().authenticated()
-        // );
+                .csrf(ServerHttpSecurity.CsrfSpec::disable)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .oauth2ResourceServer(
+                        oauth2 -> oauth2.jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter())))
+                .authorizeExchange(exchanges -> exchanges
+                        .pathMatchers("/actuator/**", "/fallback").permitAll()
+                        .pathMatchers("/api/pedidos/**").hasAnyRole("cliente", "gestor")
+                        .pathMatchers("/api/envios/**").hasRole("gestor")
+                        .pathMatchers("/api/productos/**", "/api/categorias/**").hasAnyRole("cliente", "gestor")
+                        .anyExchange().authenticated());
         return http.build();
+    }
+
+    private Converter<Jwt, Mono<AbstractAuthenticationToken>> jwtAuthenticationConverter() {
+        JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
+        converter.setJwtGrantedAuthoritiesConverter(jwt -> {
+            Collection<String> roles = extractRoles(jwt);
+            // Convertir los roles a GrantedAuthority (sin problemas de tipos)
+            return roles.stream()
+                    .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
+                    .collect(Collectors.toList());
+        });
+        return new ReactiveJwtAuthenticationConverterAdapter(converter);
+    }
+
+    @SuppressWarnings("unchecked")
+    private Collection<String> extractRoles(Jwt jwt) {
+        Collection<String> roles = new ArrayList<>();
+        // roles del realm (Keycloak)
+        Map<String, Object> realmAccess = jwt.getClaim("realm_access");
+        if (realmAccess != null && realmAccess.containsKey("roles")) {
+            roles.addAll((List<String>) realmAccess.get("roles"));
+        }
+        // roles específicos del cliente 'smartlogix-frontend'
+        Map<String, Object> resourceAccess = jwt.getClaim("resource_access");
+        if (resourceAccess != null && resourceAccess.containsKey("smartlogix-frontend")) {
+            Map<String, Object> clientRoles = (Map<String, Object>) resourceAccess.get("smartlogix-frontend");
+            if (clientRoles.containsKey("roles")) {
+                roles.addAll((List<String>) clientRoles.get("roles"));
+            }
+        }
+        return roles;
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedOrigins(List.of("http://localhost:3000"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
